flex-wrap bt resolved

--- a/packages/cogo-academy/page-components/CreateFAQ/Analytics/GraphUI/Filters/styles.module.css
+++ b/packages/cogo-academy/page-components/CreateFAQ/Analytics/GraphUI/Filters/styles.module.css
@@ -35,15 +35,9 @@
 			margin-top: 2%;
 			border-radius: 6px;
 		}
-
 		.ui_select_options_container {
 			z-index: 1000;
 		}
-
-		.react-datepicker-popper {
-			z-index: 1000;
-		}
-
 		.react-datepicker__input-container {
 			input {
 				font-family: Poppins, sans-serif;
