--- a/packages/cogo-academy/page-components/CreateFAQ/Analytics/Tabbase/Users/UsersGroup/AllUsers/UsersQuestionList/AllQuestions/styles.module.css
+++ b/packages/cogo-academy/page-components/CreateFAQ/Analytics/Tabbase/Users/UsersGroup/AllUsers/UsersQuestionList/AllQuestions/styles.module.css
@@ -32,3 +32,7 @@
 .question {
 	font-weight: 1000;
 }
+.tags {
+	display: flex;
+	flex-wrap: wrap;
+}
